# source-refactor-for-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  env.sh
lib/: CMakeLists.txt
lib/include/s2tr/: refactor.h
lib/src/: ReplacementHandler.h  refactor.cpp
lib/tests/: main.cpp  test.h  test_braces.cpp  test_else.cpp  test_helper.cpp  test_if.cpp
main/: CMakeLists.txt
modules/: FindClang.cmake  FindLLVM.cmake  UseGoogleMock.cmake
scripts/: format.sh
